# MatriarchPrime

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD
.github/workflows/: ci.yml
Assets/Shaders/: final.frag  final.vert  standard.frag  standard.vert  test.frag  test.vert
src/: MP.cpp  MP.h  main.cpp  pch.h
src/Engine/Framework/: Actor.cpp  Actor.h  ActorComponent.cpp  ActorComponent.h  Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  Game.cpp  Game.h  IMaterial.h  Material.cpp  Material.h  MeshRenderer.cpp  MeshRenderer.h  Scene.cpp  Scene.h  Stopwatch.cpp  Stopwatch.h
src/Engine/Graphics/: ComputeShader.cpp  ComputeShader.h  GraphicsManager.cpp  GraphicsManager.h  Mesh.cpp  Mesh.h  PostProcessing.cpp  PostProcessing.h  RenderPass.cpp  RenderPass.h  RenderShader.cpp  RenderShader.h  ShaderProgram.cpp  ShaderProgram.h  UniformBuffer.cpp  UniformBuffer.h
src/Engine/Input/: IInput.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/Engine/Math/: Matrices.cpp  Matrices.h  Transform.cpp  Transform.h  Vectors.cpp  Vectors.h  Vertex.cpp  Vertex.h
src/Engine/Tools/: Deserializer.cpp  Deserializer.h  FileIO.cpp  FileIO.h  Serializer.cpp  Serializer.h  ShaderCompiler.cpp  ShaderCompiler.h
